current account variant it is not visible properly-fixed

--- a/styles/nre-nro.css
+++ b/styles/nre-nro.css
@@ -1978,7 +1978,7 @@
                       line-height: 20px;
                       text-align: center;
                       color: var(--color-interface-text-primary);
-                      width: 135px;
+                      width: 145px;
                       height: 20px;
                       background-color: #D0DDFC;
 
